fixed the fact that the menu overlap issue

--- a/mod3_solution/css/styles.css
+++ b/mod3_solution/css/styles.css
@@ -3,23 +3,22 @@ body {
     background-color: #f0e8eb;
     font-family: 'Oxygen', sans-serif;
 }
-
 /** HEADER **/
 #header-nav {
     background-color: rgb(146, 143, 135);
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: black;
-    height: 6vw;
 }
 
 .navbar-brand {
-    padding: 1vw;
+    padding: 20px;
+    height: 75px;
 }
 
 .navbar-brand h1 {
     color: #557c3e;
-    font-size: 4vw;
+    font-size: 40px;
     text-transform: uppercase;
     font-weight: bold;
     text-shadow: 1px 1px 1px #222;
@@ -36,9 +35,6 @@ body {
     text-align: center;
 }
 
-#navbarSupportedContent {
-    /*background-color: #c5c5c7;*/
-}
 
 #nav-list {
     font-size: 1.2em;
@@ -61,11 +57,6 @@ body {
 #nav-list a:hover {
     background: #E7E7E7;
 }
-/*
-.navbar-header button.navbar-toggle {
-    clear: both;
-    margin-top: -30px;
-}*/
 
 #page-title {
     color: black;
@@ -86,4 +77,8 @@ body {
     padding:15px;
     font-size: 1.5em;
     font-weight: bold;
+}
+
+#content {
+    margin: 0 20px
 }
